--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -26,7 +26,7 @@
       </div>
     {% endif %}
     <h2 class="archive__item-title" itemprop="headline">
-         <span style="color: #0000FF; text-decoration: none;">{{ title }}</span>
+         <span style="color: #0000EE; text-decoration: none;">{{ title }}</span>
     </h2>
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
